Bug #614567 'Enhanced 4g LTE Mode' does not work.
[root cause  ] There's no any function implementations for turning off/on ims in ImsService.java
So VoLte button does not work.
[changes     ] AT+CAVIMS= is the only control command for 'Enhanced 4g LTE Mode'
[side effects] no
[self test   ] <board, Test cases summary>:sp9832a_2h11_4mvoltesea_VoLTE,                                                                             1.adb push ims.apk, no phone crash;
2.Turn on the 'Enhanced 4G Lte Mode' button, ims is deregistered;
3.Turn off the 'Enhanced 4G Lte Mode' button, ims is registered;
4.Turn on the 'Enhanced 4G Lte Mode' button and restart the device, ims will be registered;
5.Turn off the 'Enhanced 4G Lte Mode' button and restart the device, ims will be deregistered;
[reviewers   ] zhiwei.fu,daxing.cao
[change_type ] feature_bugfix
[tag_product ] common

Change-Id: I43c2b20fa752a2baf6aa9c13ba2de3e3b2661720